--- a/backend/package.json
+++ b/backend/package.json
@@ -37,6 +37,7 @@
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.4",
     "razorpay": "^2.9.2",
+    "socket.io": "^4.6.1",
     "streamifier": "^0.1.1",
     "winston": "^3.10.0"
   },
